# C-template-project

./: .gitignore  CMakeLists.txt  README.md
include/example/: example.h
src/: CMakeLists.txt
src/example/: example.c
test/: CMakeLists.txt
test/example/: test.c
